# opencv-aruco-test

./: .gitignore  CMakeLists.txt  opencv-test.cpp  opencv-test.sln  opencv-test.vcxproj
